Fix wrong height of main container

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -47,7 +47,6 @@ body {
   align-self: center;
   padding: 0px 25px;
   padding-bottom: 20px;
-  max-height: 85vh;
 
   .text {
     font-size: 1.1rem;
